<resources>
    <string name="app_name">Calculator</string>
    <string name="percent">%</string>
    <string name="clearEntry">CE</string>
    <string name="clearAll">C</string>
    <string name="multiply">X</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="result">=</string>
    <string name="decimal">.</string>
    <string name="test">thesaltyspitoon</string>
    <string name="plusminus">* (-1)</string>
    <string name="squareroot"></string>
    <string name="square">pow(x, 2)</string>
    <string name="delete">*0</string>
    <string name="divide">/</string>
    <string name="oneoverx">1/</string>
    <string name="expression">expression</string>
</resources>
